--- a/client/index.html
+++ b/client/index.html
@@ -129,7 +129,7 @@
     <div id="inputContainer">
       <div class="row">
         <div class="input-field col s12">
-          <input placeholder="Type titel" id="imageTitel" type="text" class="validate input-text">
+          <input placeholder="Type title" id="imageTitel" type="text" class="validate input-text">
         </div>
       </div>
 
