fixed styling for cards

--- a/client/index.html
+++ b/client/index.html
@@ -41,7 +41,7 @@
       <h3 class="center">Search</h3>
       <div class="row">
         <div class="input-field col s12">
-          <input placeholder="Receipt" id="searchInput" type="text" class="input-text">
+          <input placeholder="Receipt" id="searchInput" type="text" class="input-text" autofocus>
         </div>
       </div>
       <div class="center">
